--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="inner">
         <h1>Bluejacket</h1>
         <h2>Bluejacket for Business Developers</h2>
-        <a href="https://github.com/bjteam/bluejacket" class="button"><small>View project on</small> GitHub</a>
+        <a href="https://github.com/bluejacket-labs/framework" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
 
@@ -40,24 +40,20 @@
   </section>
 
         <aside id="sidebar">
-          <a href="https://github.com/bjteam/bluejacket/archive/0.5.zip" class="button">
-            <small>Download (5.0-cujoy)</small>
+          <a href="https://github.com/bluejacket-labs/framework/archive/master.zip" class="button">
+            <small>Download</small>
             .zip file
           </a>
-          <a href="https://github.com/bjteam/bluejacket/archive/0.5.tar.gz" class="button">
-            <small>Download (5.0-cujoy)</small>
-            .tar.gz file
-          </a>
-          <a href="https://github.com/bjteam/bjcli/raw/master/bjcli.phar" class="button">
+          <a href="https://github.com/bluejacket-labs/bjcli/raw/master/bjcli.phar" class="button">
             <small>Download CLI</small>
             phar file
           </a>
-          <a href="https://github.com/upsf-labs/bluejacket/wiki" class="button">
+          <a href="https://github.com/bluejacket-labs/framework/wiki" class="button">
             Wiki
           </a>
 
-          <p class="repo-owner"><a href="https://github.com/bjteam/bluejacket"></a> is maintained by <a href="https://github.com/upsf-labsr">UPSF Team</a>.</p>
-          <p>&copy; 2013<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, OdiacFW -> Bluejacket PHP Development. Project developing under <a href="https://github.com/bjteam/bluejacket/blob/master/LICENSE.md">BSD-3 License</a></p>
+          <p class="repo-owner"><a href="https://github.com/bluejacket-labs/framework"></a> is maintained by <a href="https://github.com/bluejacket-labs">Bluejacket Team</a>.</p>
+          <p>&copy; 2013<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, OdiacFW -> Bluejacket PHP Development. Project developing under <a href="https://github.com/bluejacket-labs/blob/master/LICENSE.md">MIT</a></p>
           </aside>
       </div>
     </div>
