--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <h1>Bluejacket</h1>
         <h2>Bluejacket for Business Developers</h2>
         <a href="https://github.com/bluejacket-labs/framework" class="button"><small>View project on</small> GitHub</a>
+        <a href="http://api.bluejacket.io/" class="button">API</a>
       </div>
     </header>
 
