--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         <h1>Bluejacket</h1>
         <h2>Bluejacket for Business Developers</h2>
         <a href="https://github.com/bluejacket-labs/framework" class="button"><small>View project on</small> GitHub</a>
-        <a href="http://api.bluejacket.io/" class="button">API</a>
       </div>
     </header>
 
@@ -48,6 +47,10 @@
           <a href="https://github.com/bluejacket-labs/bjcli/raw/master/bjcli.phar" class="button">
             <small>Download CLI</small>
             phar file
+          </a>
+          <a href="http://api.bluejacket.io/" class="button">
+            <small>BlueJacket</small>
+            API
           </a>
           <a href="https://github.com/bluejacket-labs/framework/wiki" class="button">
             Wiki
